[package]
name = "xcm-builder"
description = "Tools & types for building with XCM and its executor."
version = "0.9.36"
edition = "2021"

[dependencies]
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
xcm = { path = "..", default-features = false }
xcm-executor = { path = "../xcm-executor", default-features = false }
sp-std = { version = "5.0.0", default-features = false, path = "../../primitives/std" }
sp-arithmetic = { version = "6.0.0",default-features = false, path = "../../primitives/arithmetic" }
sp-io = { version = "7.0.0",default-features = false, path = "../../primitives/io" }
sp-runtime = { version = "7.0.0", default-features = false, path = "../../primitives/runtime" }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../../frame/support" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../../frame/system" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", default-features = false,path = "../../frame/transaction-payment/rpc" }
log = { version = "0.4.17", default-features = false }

# Polkadot dependencies
polkadot-parachain = { path = "../../parachain", default-features = false }

[dev-dependencies]
sp-core = { version = "7.0.0", path = "../../primitives/core" }
pallet-balances = { version = "4.0.0-dev", path = "../../frame/balances" }
pallet-xcm = { path = "../pallet-xcm" }
polkadot-runtime-parachains = { path = "../../runtime2/parachains" }
[features]
default = ["std"]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks"
]
std = [
	"log/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"xcm/std",
	"xcm-executor/std",
	"sp-std/std",
	"sp-arithmetic/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"polkadot-parachain/std",
	# "pallet-transaction-payment-rpc/std",
]
