[package]
name = "xcm-executor"
description = "An abstract and configurable XCM message executor."
version = "0.9.36"
edition = "2021"

[dependencies]
impl-trait-for-tuples = "0.2.2"
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }
xcm = { path = "..", default-features = false }
sp-std = { version = "5.0.0", default-features = false, path = "../../primitives/std" }
sp-io = { version = "7.0.0", default-features = false, path = "../../primitives/io" }
sp-arithmetic = { version = "6.0.0",  default-features = false, path = "../../primitives/arithmetic" }
sp-core = { version = "7.0.0", default-features = false, path = "../../primitives/core" }
sp-runtime = { version = "7.0.0", default-features = false, path = "../../primitives/runtime" }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../../frame/support" }
log = { version = "0.4.17", default-features = false }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true , path = "../../frame/benchmarking" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]
std = [
	"parity-scale-codec/std",
	"xcm/std",
	"sp-std/std",
	"sp-io/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"log/std",
]
