[package]
name = "xcm-simulator"
description = "Test kit to simulate cross-chain message passing and XCM execution"
version = "0.9.36"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
paste = "1.0.7"

frame-support = { version = "4.0.0-dev", path = "../../frame/support",default-features = false }
sp-io = { version = "7.0.0", path = "../../primitives/io",default-features = false }
sp-std = { version = "5.0.0", path = "../../primitives/std",default-features = false }

xcm = { path = "../" }
xcm-executor = { path = "../xcm-executor" }
polkadot-core-primitives = { path = "../../core-primitives"}
polkadot-parachain = { path = "../../parachain" }
polkadot-runtime-parachains = { path = "../../runtime2/parachains" }
