[package]
name = "polkadot-node-core-approval-voting"
version = "0.9.36"
edition = "2021"

[dependencies]
futures = "0.3.21"
futures-timer = "3.0.2"
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["bit-vec", "derive"] }
gum = { package = "tracing-gum", path = "../../gum" }
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
lru = "0.8"
merlin = "2.0"
schnorrkel = "0.9.1"
kvdb = "0.13.0"
derive_more = "0.99.17"
thiserror = "1.0.31"

polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-node-subsystem-util = { path = "../../subsystem-util" }
polkadot-overseer = { path = "../../overseer" }
polkadot-primitives = { path = "../../../primitives2" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-node-jaeger = { path = "../../jaeger" }

sc-keystore = {  version = "4.0.0-dev", path = "../../../client/keystore", default-features = false  }
sp-consensus = {version = "0.10.0-dev", path = "../../../primitives/consensus/common" , default-features = false  }
sp-consensus-slots = { version = "0.10.0-dev", path = "../../../primitives/consensus/slots", default-features = false}
sp-application-crypto = {version = "7.0.0", path = "../../../primitives/application-crypto" , default-features = false, features = ["full_crypto"]  }
sp-runtime = { version = "7.0.0", path = "../../../primitives/runtime", default-features = false  }

[dev-dependencies]
async-trait = "0.1.57"
parking_lot = "0.12.0"
rand_core = "0.5.1" #should match schnorrkel
sp-keyring = { version = "7.0.0", path = "../../../primitives/keyring" }
sp-keystore = { version = "0.13.0", path = "../../../primitives/keystore" }
sp-core = { version = "7.0.0", path = "../../../primitives/core" }
sp-consensus-babe = { version = "0.10.0-dev", path = "../../../primitives/consensus/babe" }
polkadot-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
assert_matches = "1.4.0"
kvdb-memorydb = "0.13.0"
test-helpers = { package = "polkadot-primitives-test-helpers", path = "../../../primitives2/test-helpers" }
